--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     margin: 5% auto;
     height: 100%;
-    width: 100%;
+    width: 376px;
     background-color: #474a51;
 }
 
@@ -33,13 +33,14 @@ body {
 }
 
 .result p {
+    overflow-x: hidden;
     font-family: "Poppins", sans-serif;
     font-size: 45px;
     line-height: 82.5px;
     font-weight: 400;
     color: #fff;
     padding-right: 19px;
-    padding-left: 19px;
+    padding-left: 0px;
     margin: 0;
     padding-bottom: 15px;
     max-width: 100%;
